[workspace]
members = [".", "derive"]

[package]
name = "rusty-value"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/rusty-value"
description = "Create a generic inspectable value from any rust type"
authors = ["trivernis <trivernis@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusty-value-derive]
version = "0.1.0"
path = "./derive"
optional = true

[features]
default = []
derive = ["rusty-value-derive"]

[dev-dependencies.rusty-value-derive]
path = "./derive"
