[package]
name = "rusty-value-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/rusty-value"
description = "Derive implementaton for rusty-value"
authors = ["trivernis <trivernis@proton.me>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0.46"
quote = "1.0.21"

[dependencies.syn]
version = "1"
features = ["full"]
